# k0s

./: .bazelrc  .deepsource.toml  .dockerignore  .envrc  .gitignore  .gitpod.yml  .goreleaser.yaml  .mods  BUILD.bazel  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.dapper  Dockerfile.heroku  Dockerfile.local  MODULE.bazel  Makefile  README.md  VERSION  WORKSPACE  agent.yaml  agent.yaml.sample  agent@.service  agents.sh  app.json  bin.go  client.go  client.yaml  cmd_agent.go  cmd_client.go  cmd_hub.go  default.go  docker-compose.yml  extensions.bzl  get-hideme  go.mod  go.sum  go.work  go.work.sum  go_repos.bzl  (+17 more)
.bazelci/: presubmit.yml
.buildkite/: README.md  gen  pipeline.yml
.cargo/: config
.ci/: agent.sh  release-latest.sh
.devcontainer/: Dockerfile  Dockerfile.devcontainer  devcontainer.json
.docker/: Dockerfile.agent  Dockerfile.agent.alpine  Dockerfile.agent.arch  Dockerfile.agent.centos  Dockerfile.agent.debian  Dockerfile.agent.fedora  Dockerfile.agent.gentoo  Dockerfile.agent.ubuntu  Dockerfile.alpine  Dockerfile.centos  Dockerfile.client  Dockerfile.conntroll  Dockerfile.debian  Dockerfile.hub  Dockerfile.ubuntu  agent.yaml  build-push  build.sh  entrypoint.sh  push.sh
.docker-compose/: .env  .gitignore  README.md  agents.sh  dl  docker-compose.yml  grafana.ini  prometheus.yml  up  update_scrape_targets  xpanes
.github/: README.md
.github/workflows/: build.yml  codeql-analysis.yml  docker-image.yml  goreleaser.yml  release.yml  test.yml
.heroku/: Dockerfile
.hideme/makeself/: launch
.k0s/: agent.yaml.sample  client.yaml.sample
.slave/: Dockerfile
.slave/hooks/: seashells
.systemd/: agent@.service  k0s-agent@.service  k0s-hub.service
admissionregistration/: v1.d.ts
api/: resource.d.ts
apiextensions/: v1.d.ts
apiserverinternal/: v1alpha1.d.ts
apps/: v1.d.ts
authentication/: v1.d.ts
authorization/: v1.d.ts
autoscaling/: v1.d.ts  v2.d.ts  v2beta2.d.ts
batch/: v1.d.ts
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: BUILD.Inflector-0.11.4.bazel  BUILD.actix-0.13.0.bazel  BUILD.actix-codec-0.5.0.bazel  BUILD.actix-http-3.2.1.bazel  BUILD.actix-macros-0.2.3.bazel  BUILD.actix-router-0.5.0.bazel  BUILD.actix-rt-2.7.0.bazel  BUILD.actix-server-2.1.1.bazel  BUILD.actix-service-2.0.2.bazel  BUILD.actix-utils-3.0.0.bazel  BUILD.actix-web-4.1.0.bazel  BUILD.actix-web-actors-4.1.0.bazel  BUILD.actix-web-codegen-4.0.1.bazel  BUILD.actix_derive-0.6.0.bazel  BUILD.ahash-0.7.6.bazel  BUILD.aho-corasick-0.7.18.bazel  BUILD.array_tool-1.0.3.bazel  BUILD.async-compression-0.3.14.bazel  BUILD.atty-0.2.14.bazel  BUILD.backoff-0.4.0.bazel  BUILD.block-buffer-0.10.2.bazel  BUILD.bumpalo-3.10.0.bazel  BUILD.bytestring-1.1.0.bazel  BUILD.chrono-0.4.19.bazel  BUILD.colored-2.0.0.bazel  BUILD.convert_case-0.4.0.bazel  BUILD.core-foundation-0.9.3.bazel  BUILD.cpufeatures-0.2.2.bazel  BUILD.crossbeam-channel-0.5.5.bazel  BUILD.crossbeam-utils-0.8.10.bazel  BUILD.crypto-common-0.1.4.bazel  BUILD.darling-0.14.1.bazel  BUILD.darling_core-0.14.1.bazel  BUILD.darling_macro-0.14.1.bazel  BUILD.dashmap-4.0.2.bazel  BUILD.derivative-2.2.0.bazel  BUILD.derive_more-0.99.17.bazel  BUILD.digest-0.10.3.bazel  BUILD.dirs-sys-next-0.1.2.bazel  BUILD.doc-comment-0.3.3.bazel  (+157 more)
certificates/: v1.d.ts
client/: Dockerfile  Dockerfile.base  Dockerfile.local  build.local  client.go
client/config/: config.go
client/dial/: dial.go
cmd/: go.mod  go.sum
cmd/agent/: BUILD.bazel  agent.go  main.go
cmd/ameniicsa/: BUILD.bazel  main.go
cmd/bcrypt/: BUILD.bazel
cmd/bingo/: BUILD.bazel  bin.go  main.go
cmd/buildkite/: BUILD.bazel  main.go
cmd/caddy/: BUILD.bazel  main.go
cmd/cadvisor/: BUILD.bazel  cadvisor.go  main.go  storagedriver.go
cmd/chassis/: BUILD.bazel  main.go
cmd/clash/: BUILD.bazel
cmd/client/: BUILD.bazel  main.go
cmd/conntroll/: agent.go
cmd/coredns/: BUILD.bazel  main.go
cmd/dapper/: BUILD.bazel
cmd/dkg/: BUILD.bazel  main.go
cmd/dohserver/: BUILD.bazel  main.go
cmd/elvish/: BUILD.bazel
cmd/envhandler/: BUILD.bazel
cmd/filebrowser/: BUILD.bazel  main.go
cmd/gasm/: BUILD.bazel  main.go
cmd/gitd/: BUILD.bazel  main.go
cmd/goproxy/: BUILD.bazel  main.go
cmd/gos/: BUILD.bazel  main.go
cmd/hub/: BUILD.bazel  main.go
cmd/hub2/: BUILD.bazel  main.go
cmd/ivy/: BUILD.bazel  ivy.go
cmd/k0s/: BUILD.bazel  main.go
cmd/k16s/: BUILD.bazel  kube.go  main.go  mux.go  run.go
cmd/kproxy/: BUILD.bazel  cmd.go
cmd/kubectl/: BUILD.bazel  main.go
cmd/kuber/: BUILD.bazel  main.go
cmd/kurl/: BUILD.bazel  main.go
cmd/master/: main.go
cmd/metrics-server/: BUILD.bazel
cmd/mnt/: BUILD.bazel  main.go
cmd/mnt-etcd/: BUILD.bazel  ldap.go
cmd/pcp/: BUILD.bazel  main.go
cmd/portainer-agent/: BUILD.bazel  main.go
cmd/self/: BUILD.bazel  main.go
cmd/slave/: main.go
cmd/starlark/: BUILD.bazel
cmd/v2fly/: BUILD.bazel
cmd/wazero/: BUILD.bazel  main.go
cmd/webproc/: BUILD.bazel  main.go
cmd/wetty/: BUILD.bazel  main.go
cmd/wetty-cli/: BUILD.bazel  main.go
cmd/yaegi/: BUILD.bazel
coordination/: v1.d.ts
core/: v1.d.ts
discovery/: v1.d.ts
doc/: design.md
events/: v1.d.ts
flowcontrol/: v1beta1.d.ts  v1beta2.d.ts
grpctax/: gen.go  tax.pb.go  tax.proto
header/: header.go
meta/: v1.d.ts
networking/: v1.d.ts
node/: v1.d.ts
pkg/: BUILD.bazel  default.go  gen.go  plugin.py  plugin.ts  time.ts  types.go
policy/: v1.d.ts
protocol/: protocol.go
rbac/: v1.d.ts
scheduling/: v1.d.ts
server/: clientpool.go  handlers.go  input.go  server.go
slave/: slave.go
src/: hub.rs  k8s-controller.rs  main.rs
starlark/: defs.bzl
storage/: v1.d.ts  v1beta1.d.ts
toolchain/: BUILD.bazel  android_ndk.bzl  cc_toolchain_config.bzl  cc_toolchain_config_android_386.bzl  cc_toolchain_config_android_amd64.bzl  cc_toolchain_config_android_arm64.bzl  cc_toolchain_config_android_armv7.bzl
tools/: asdf  bazel  bump_version  busybox  gen-meta-tags  ldflags_bazel  push-tags  replace_all  require_all  tmux  update-bazelw  update-goproxy-cache  which_bazel
wrap/: conn.go  readwritecloser.go
(+594 files in other folders)
