load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@rules_clojure//:rules.bzl", "clojure_repl")

# load("@io_bazel_rules_go//go:def.bzl", "go_binary")

# bazel rule definition
gazelle(
    name = "gazelle",
    command = "fix",
    prefix = "k0s.io",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli/agent:go_default_library",
        "//pkg/cli/bcrypt:go_default_library",
        "//pkg/cli/buildkite:go_default_library",
        "//pkg/cli/caddy:go_default_library",
        "//pkg/cli/chassis:go_default_library",
        "//pkg/cli/client:go_default_library",
        "//pkg/cli/dohserver:go_default_library",
        "//pkg/cli/filebrowser:go_default_library",
        "//pkg/cli/gitd:go_default_library",
        "//pkg/cli/goproxy:go_default_library",
        "//pkg/cli/gos:go_default_library",
        "//pkg/cli/gost:go_default_library",
        "//pkg/cli/hub:go_default_library",
        "//pkg/cli/k16s:go_default_library",
        "//pkg/cli/kubectl:go_default_library",
        "//pkg/cli/mnt:go_default_library",
        "//pkg/cli/trojan:go_default_library",
        "//pkg/cli/webproc:go_default_library",
        "//vendor/github.com/alexpantyukhin/go-pattern-match:go_default_library",
    ],
)

go_binary(
    name = "k0s",
    embed = [":go_default_library"],
    linkmode = "pie",  # https://github.com/bazelbuild/rules_go/issues/2371
    visibility = ["//visibility:public"],
    x_defs = {
        "k0s.io/pkg/version.GitCommitString": "{STABLE_GitCommitString}",
        "k0s.io/pkg/version.GitStateString": "{STABLE_GitStateString}",
        "k0s.io/pkg/version.GitBranchString": "{STABLE_GitBranchString}",
        "k0s.io/pkg/version.GitSummaryString": "{STABLE_GitSummaryString}",
        "k0s.io/pkg/version.BuildDateString": "{STABLE_BuildDateString}",
        "k0s.io/pkg/version.VersionString": "{STABLE_VersionString}",
    },
)

go_binary(
    name = "k0s_static",
    embed = [":go_default_library"],
    static = "on",
    visibility = ["//visibility:public"],
    x_defs = {
        "k0s.io/pkg/version.GitCommitString": "{STABLE_GitCommitString}",
        "k0s.io/pkg/version.GitStateString": "{STABLE_GitStateString}",
        "k0s.io/pkg/version.GitBranchString": "{STABLE_GitBranchString}",
        "k0s.io/pkg/version.GitSummaryString": "{STABLE_GitSummaryString}",
        "k0s.io/pkg/version.BuildDateString": "{STABLE_BuildDateString}",
        "k0s.io/pkg/version.VersionString": "{STABLE_VersionString}",
    },
)

load("@io_bazel_rules_go//go:def.bzl", "nogo")

nogo(
    name = "nogo",
    visibility = ["//visibility:public"],  # must have public visibility
    deps = [
        # analyzer from a remote repository
        "@org_golang_x_tools//go/analysis/passes/printf:go_tool_library",
    ],
)

go_image(
    name = "k0s_image",
    base = "@base//image",
    binary = ":k0s_static",
    repository = "btwiuse",
)

container_push(
    name = "k0s_image_push",
    format = "Docker",
    image = ":k0s_image",
    registry = "index.docker.io",
    repository = "btwiuse/k0s",
    tag = "latest",
)

load("@rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
    name = "k0s_rs",
    srcs = ["src/main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//cargo:rand",
        "//cargo:serde",
        "//cargo:serde_json",
    ],
)

rust_binary(
    name = "k8s-controller",
    srcs = ["src/k8s-controller.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//cargo:serde",
        "//cargo:serde_json",
        # "//cargo:serde_derive",
        "//cargo:kube",
        "//cargo:kube_runtime",
        # "//cargo:kube-derive",
        "//cargo:k8s_openapi",
        "//cargo:schemars",
        "//cargo:tokio",
        "//cargo:futures",
    ],
)

platform(
    name = "windows_386_cgo",
    constraint_values = [
        ":mingw",
    ],
    parents = ["@io_bazel_rules_go//go/toolchain:windows_386_cgo"],
)

platform(
    name = "windows_amd64_cgo",
    constraint_values = [
        ":mingw64",
    ],
    parents = ["@io_bazel_rules_go//go/toolchain:windows_amd64_cgo"],
)

platform(
    name = "android_amd64_cgo",
    constraint_values = [
        ":android_amd64",
    ],
    parents = ["@io_bazel_rules_go//go/toolchain:android_amd64_cgo"],
)

platform(
    name = "android_386_cgo",
    constraint_values = [
        ":android_386",
    ],
    parents = ["@io_bazel_rules_go//go/toolchain:android_386_cgo"],
)

clojure_repl(name = "clj_repl")

load("@com_github_google_rules_install//installer:def.bzl", "installer")

installer(
    name = "install_k0s",
    data = [":k0s"],
)

installer(
    name = "install_k0s_static",
    data = [":k0s_static"],
)
