[package]
name = "k0s"
version = "0.0.3"
authors = ["btwiuse <btwiuse@gmail.com>"]
license = "MIT"
description = "aggregate your personal infrastructure"
repository = "https://github.com/btwiuse/k0s"
edition = "2021"

include = [
    "src/*.rs",
    "cargo/**/*",
    "Cargo.toml",
]

[profile.release]
panic = "abort"
lto = true

[[bin]]
name = "hub"
path = "src/hub.rs"

[[bin]]
name = "k0s"
path = "src/main.rs"

[[bin]]
name = "k8s-controller"
path = "src/k8s-controller.rs"

[dependencies]

rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
# serde = "1.0"
# serde_json = "1.0"
# serde_derive = "1.0"

# kube = "0.45"
# https://docs.rs/crate/kube/0.47.0/features
kube = { version = "0.47", features = ["derive"] }
kube-runtime = "0.47"
# kube-derive = "0.45"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
k8s-openapi = { version = "0.10", features = ["v1_18"] }
schemars = "0.8"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
# snafu = "0.6.8"

actix = "0.13"
actix-rt = "2.7"
bytes = "1.1"
actix-web = { version = "4.0", default-features = false, features = ["macros"] }
actix-web-actors = "4.1"
actix-http = "3.0"
# serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
log = "0.4"
simple_logger = "2.1"

[package.metadata.raze]
default_gen_buildrs = true
rust_rules_workspace_name = "rules_rust"

# The path relative path to the Bazel workspace root (location of
# WORKSPACE.bazel/WORKSPACE file). If no workspace file is found,
# the current working directory is used.
workspace_path = "//cargo"

package_aliases_dir = "cargo"

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

# The two acceptable options are "Remote" and "Vendored" which
# is used to idnicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Vendored"
