package(default_visibility = ["//visibility:public"])

cc_toolchain_suite(
    name = "android_suite",
    toolchains = {
        "x86_64": ":android_amd64_toolchain",
        "x86_64|android_amd64": ":android_amd64_toolchain",
        "aarch64": ":android_arm64_toolchain",
        "aarch64|android_arm64": ":android_arm64_toolchain",
    },
)

cc_toolchain_suite(
    name = "mingw_suite",
    toolchains = {
        "x86_32": ":mingw_toolchain_32",
        "x86_32|mingw": ":mingw_toolchain_32",
        "x86_64": ":mingw_toolchain_64",
        "x86_64|mingw64": ":mingw_toolchain_64",
    },
)

filegroup(name = "empty")

cc_toolchain(
    name = "android_amd64_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":android_amd64_toolchain_config",
    toolchain_identifier = "android_amd64_toolchain",
)

cc_toolchain(
    name = "android_arm64_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":android_arm64_toolchain_config",
    toolchain_identifier = "android_arm64_toolchain",
)

cc_toolchain(
    name = "mingw_toolchain_32",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":mingw_toolchain_config_32",
    toolchain_identifier = "mingw-toolchain-32",
)

cc_toolchain(
    name = "mingw_toolchain_64",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":mingw_toolchain_config_64",
    toolchain_identifier = "mingw-toolchain-64",
)

load(
    ":cc_toolchain_config.bzl",
    "cc_toolchain_config_32",
    "cc_toolchain_config_64",
)

cc_toolchain_config_32(name = "mingw_toolchain_config_32")
cc_toolchain_config_64(name = "mingw_toolchain_config_64")

load(
    ":cc_toolchain_config_android_amd64.bzl",
    "cc_toolchain_config_android_amd64",
)

cc_toolchain_config_android_amd64(name = "android_amd64_toolchain_config")

load(
    ":cc_toolchain_config_android_arm64.bzl",
    "cc_toolchain_config_android_arm64",
)

cc_toolchain_config_android_arm64(name = "android_arm64_toolchain_config")

toolchain(
    name = "cc-toolchain-mingw",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_32",
        "@platforms//os:windows",
    ],
    toolchain = ":mingw_toolchain_32",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "cc-toolchain-mingw64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = ":mingw_toolchain_64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "cc-toolchain-android_amd64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:android",
    ],
    toolchain = ":android_amd64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "cc-toolchain-android_arm64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:android",
    ],
    toolchain = ":android_arm64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
