load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/k0s/cmd/agent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/agent/agent:go_default_library",
        "//pkg/agent/config:go_default_library",
    ],
)

go_binary(
    name = "agent",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
