load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/agent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli/agent:go_default_library",
        "//pkg/log:go_default_library",
    ],
)

go_binary(
    name = "agent",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
