load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/ameniicsa",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/asciitransport/v2:go_default_library",
        "//pkg/console:go_default_library",
        "//pkg/localcmd:go_default_library",
        "//pkg/uuid:go_default_library",
    ],
)

go_binary(
    name = "ameniicsa",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
