load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/bingo",
    visibility = ["//visibility:private"],
    deps = ["@com_github_btwiuse_bingo//:go_default_library"],
)

go_binary(
    name = "bingo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
