load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/clash",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/Dreamacro/clash/config:go_default_library",
        "//vendor/github.com/Dreamacro/clash/constant:go_default_library",
        "//vendor/github.com/Dreamacro/clash/hub:go_default_library",
        "//vendor/github.com/Dreamacro/clash/hub/executor:go_default_library",
        "//vendor/github.com/Dreamacro/clash/log:go_default_library",
        "//vendor/go.uber.org/automaxprocs/maxprocs:go_default_library",
    ],
)

go_binary(
    name = "clash",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
