load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/k0s.io/pkg/cli/client:go_default_library",
        "//vendor/k0s.io/pkg/log:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
