load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/k0s/cmd/dapper",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/rancher/dapper/file:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/urfave/cli:go_default_library",
    ],
)

go_binary(
    name = "dapper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
