load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/dkg",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/btwiuse/dkg/pkg/imgpkg/cmd:go_default_library",
        "//vendor/github.com/cppforlife/go-cli-ui/ui:go_default_library",
    ],
)

go_binary(
    name = "dkg",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
