load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/k0s/cmd/elvish",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/src.elv.sh/pkg/buildinfo:go_default_library",
        "//vendor/src.elv.sh/pkg/daemon:go_default_library",
        "//vendor/src.elv.sh/pkg/prog:go_default_library",
        "//vendor/src.elv.sh/pkg/shell:go_default_library",
    ],
)

go_binary(
    name = "elvish",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
