load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/filebrowser",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/filebrowser/filebrowser/v2/cmd:go_default_library"],
)

go_binary(
    name = "filebrowser",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
