load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/gasm",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/mathetake/gasm/wasi:go_default_library",
        "//vendor/github.com/mathetake/gasm/wasm:go_default_library",
    ],
)

go_binary(
    name = "gasm",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
